--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -166,11 +166,11 @@
     .steps-box:first-child {
         text-align: center;
     }
-    
-    .social-links{
+
+    .social-links {
         float: left;
-        }
-    
+    }
+
     .footer-nav li,
     .social-links li {
 
@@ -185,10 +185,14 @@
 
 /*small phones: from 0 to 480px*/
 @media only screen and (max-width: 480px) {
-    section{
+    section {
         padding: 25px 0;
     }
-    .contact-form{
+
+    .contact-form {
         width: 100%;
+    }
+    .btn-full{
+        margin-bottom: 10px;
     }
 }
